--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "embla-carousel-react": "^8.6.0",
     "lenis": "^1.3.11",
     "lucide-react": "^0.525.0",
+    "matter-js": "^0.20.0",
     "motion": "^12.23.13",
     "next": "15.3.5",
     "next-themes": "^0.4.6",
