--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "NEXT_DISABLE_TURBOPACK=1 next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -16,7 +16,7 @@
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
     "html-to-image": "^1.11.13",
-    "lenis": "^1.3.11",
+    "lenis": "^1.3.17",
     "lucide-react": "^0.525.0",
     "matter-js": "^0.20.0",
     "motion": "^12.23.13",
