--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-virtual": "^3.13.18",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "html-to-image": "^1.11.13",
     "lenis": "^1.3.17",
